force-app/main/default/objects/Q9__Metadata_Item__c/Q9__Metadata_Item__c.object-meta.xml
<CustomObject>
    <description>Data related to specific metadata items processed by Elements on the Salesforce platform.</description>
    <label>Metadata Item</label>
    <nameField>
        <displayFormat>ITEM-{0000000}</displayFormat>
        <label>Metadata Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>