force-app/main/default/objects/Q9__Metadata_Item__c/fields/Q9__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Q9__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if the profile previously existed, but has since been deleted</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>