force-app/main/default/objects/Q9__Metadata_Item__c/fields/Q9__Last_Modified_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Q9__Last_Modified_Datetime__c</fullName>
    <description>Datetime that the Profile was last modified.</description>
    <inlineHelpText>Datetime that the Profile was last modified.</inlineHelpText>
    <label>Last Modified Datetime</label>
    <type>DateTime</type>
</CustomField>