force-app/main/default/objects/Q9__Metadata_Item__c/fields/Q9__Last_Saved_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Q9__Last_Saved_Datetime__c</fullName>
    <description>Date/Time that the Profile metadata was retrieved and saved.</description>
    <inlineHelpText>Date/Time that the Profile metadata was retrieved and saved.</inlineHelpText>
    <label>Last Saved Datetime</label>
    <type>DateTime</type>
</CustomField>