force-app/main/default/objects/Q9__Metadata_Item__c/fields/Q9__Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Q9__Metadata_Type__c</fullName>
    <description>The metadata item&apos;s metadata type.</description>
    <inlineHelpText>The metadata item&apos;s metadata type.</inlineHelpText>
    <label>Metadata Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>